manifests/apps/web-api-so/base/resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-api-so
  labels:
    app.kubernetes.io/name: web-api-so
    app.kubernetes.io/part-of: dialogporten
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: web-api-so
  template:
    metadata:
      labels:
        app.kubernetes.io/name: web-api-so
        app.kubernetes.io/part-of: dialogporten
        azure.workload.identity/use: "true"
      annotations:
        cluster-autoscaler.kubernetes.io/safe-to-evict: "true"
        linkerd.io/inject: enabled
    spec:
      serviceAccountName: web-api-so
      containers:
        - name: web-api-so
          image: ghcr.io/altinn/dialogporten-webapi:set-by-ci
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              cpu: "1"
              memory: 2Gi
            limits:
              cpu: "1"
              memory: 2Gi
          startupProbe:
            httpGet:
              path: /health/startup
              port: 8080
            periodSeconds: 10
            failureThreshold: 30
            timeoutSeconds: 2
          livenessProbe:
            httpGet:
              path: /health/liveness
              port: 8080
            periodSeconds: 10
            failureThreshold: 3
            timeoutSeconds: 2
          readinessProbe:
            httpGet:
              path: /health/readiness
              port: 8080
            periodSeconds: 10
            failureThreshold: 3
            timeoutSeconds: 2
---
apiVersion: v1
kind: Service
metadata:
  name: web-api-so
  labels:
    app.kubernetes.io/name: web-api-so
    app.kubernetes.io/part-of: dialogporten
spec:
  selector:
    app.kubernetes.io/name: web-api-so
  ports:
    - name: http
      port: 80
      targetPort: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: web-api-so
  labels:
    app.kubernetes.io/name: web-api-so
    app.kubernetes.io/part-of: dialogporten
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: traefik-gateway
    namespace: traefik   
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: web-api-so
      port: 80
    filters:
    - requestHeaderModifier:
        set:
        - name: l5d-dst-override
          value: web-api-so.product-dialogporten.svc.cluster.local:80
      type: RequestHeaderModifier
    matches:
    - path:
        type: PathPrefix
        value: /
